src/widgets/Header/styles/Header.css
/* Desktop (1920px 기준) */
.header {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 60px;
  width: 100%;
}

.header__logo {
  font-size: 22px;
  font-weight: 600;
  color: var(--header-logo);
  cursor: pointer;
  text-decoration: none;
}

.header__nav {
  display: flex;
  font-size: 16px;
  font-weight: 500;
  gap: 80px;
  color: var(--header-nav);
}

.header__nav-item {
  text-decoration: none;
  color: inherit;
}

.header__nav-item:hover {
  font-weight: 600;
  color: var(--header-nav-focus);
  cursor: pointer;
}

.header__auth {
  display: flex;
  align-items: center;
  gap: 25px;
  justify-content: flex-end;
}

.header__auth-btn {
  font-size: 14px;
  font-weight: 500;
  color: var(--header-auth);
  cursor: pointer;
  text-decoration: none;
  line-height: 1;
}

.header__auth-btn:hover {
  font-weight: 600;
  color: var(--header-auth-focus);
}

.header__auth-btn--profile {
  display: flex;
  align-items: center;
  font-size: 25px;
  cursor: pointer;
}

.header__hamburger {
  display: none;
  background-color: transparent;
  cursor: pointer;
  font-size: 18px;
}

.header__nav--mobile {
  display: none;
}

/* Tablet(1024px 이하) */
@media (max-width: 1024px) {
  .header {
    padding: 15px 30px;
  }

  .header__logo {
    font-size: 18px;
  }

  .header__nav {
    gap: 50px;
    font-size: 14px;
  }

  .header__auth {
    gap: 20px;
  }

  .header__auth-btn {
    font-size: 12px;
  }

  .header__auth-btn--profile {
    font-size: 20px;
  }
}

/* Mobile (768px 이하) */
@media (max-width: 768px) {
  .header {
    padding: 16px 15px;
  }

  .header__logo {
    font-size: 16px;
  }

  .header__nav,
  .header__auth {
    display: none;
  }

  .header__hamburger {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .header__nav--mobile {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    padding: 20px 30px;
    gap: 20px;
    font-size: 14px;
    font-weight: 500;
    background-color: var(--white-900);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
    z-index: 100;
  }

  .header__overlay {
    display: block;
    position: fixed;
    inset: 0;
    z-index: 99;
  }

  .header__nav-item {
    color: var(--header-nav);
    font-weight: 500;
    cursor: pointer;
    text-decoration: none;
  }

  .header__auth--mobile {
    display: flex;
    align-items: center;
    gap: 10px;
    padding-top: 20px;
    border-top: 1px solid #eee;
  }

  .header__auth-btn--profile {
    font-size: 15px;
  }
}

